changelog.txt - What has been done to WinDirStat (newest top)
=============================================================

2003-12-13	bseifert
	* Added size grippers to the resizable dialogs.
	* Corrections in French windirstat.rc
	* Made "Bytes", "KB", "MB, "GB", "TB" localizable.

2003-12-08	bseifert
	* Release 1.0.1
	
2003-12-07	bseifert
	* User defined cleanups are now by default disabled for UNC paths.
	  New option to enable udcs for UNC paths.
	* Drive Selection Dialog: Foldername field: Validation took a long
	  time, if UNC paths were entered using the keyboard. Validation
	  is now turned off, if the path begins with \\.
	  
2003-12-07	bseifert
	* If the localized help file is not found, the English one is now tried.
	* New shortcut F5 for 'Refresh Selected'.
	* English version: '?' renamed to 'Help'.
	* Select Drives Dialog: now queries the drives via background threads.
	* tigroo almost finished French translation of windirstat.rc.
	* When the tree is empty (drive selection canceled), the program
	    crashed after 'Empty Recycle Bin'. It also crashed when 
	    'Show free space' or 'Show unknown' was selected.
	* Due to a bug, 'Empty Recycle Bin' was always enabled, even when
	    the recycle bin was empty.
	* Due to a bug, 'Empty Recycle Bin' was never enabled on W2k.

2003-12-03	bseifert
	* Select Drives Dialog: 'A Folder' field: Relative paths and
	    trailing backslashes are now handled correctly.
	* Added "Thanks to" beta testers.
	* Contextmenu and doubleclick didn't work correctly if Name-column wasn't leftmost.

2003-11-26	bseifert
	* Version number '1.0.1rc3'
	* Placed platform.h/cpp into 'common' folder.
	* Pacman is now symmetric on NT AND 9x.
	
2003-11-25	bseifert
	* With slow drives (diskettes), the program crashed, when activating 
	    or deactivating "show free space" or "show unknown".
	* Program could crash when the color column in the extension list was
	    made too small.